Added a submit button on candidate_app page. Added a div on tasks page that will display hidden content

--- a/CODE2040Dashboard/grails-app/views/candidate_app.html
+++ b/CODE2040Dashboard/grails-app/views/candidate_app.html
@@ -68,6 +68,7 @@
 						<label for="mixed">Two or more races</label>
 					</div>
 				</div>
+				<input type="submit" value="Submit"/>
 			</form>
 		</div>
 	</body>
