--- a/CODE2040Dashboard/grails-app/views/tasks.html
+++ b/CODE2040Dashboard/grails-app/views/tasks.html
@@ -10,9 +10,14 @@
 		</div>
 		<div class="content">
 			<div class="task row">
-				<img src="" alt="triangular arrow"/>
-				<h4 class="task_header">Step 1: Review application</h4>
-				<h4 class="count">1</h4>
+				<div class="row">
+					<img src="" alt="triangular arrow"/>
+					<h4 class="task_header">Step 1: Review application</h4>
+					<h4 class="count">1</h4>
+				</div>
+				<div class="row hidden" id="hidden_content_step_one">
+
+				</div>
 			</div>
 			<div class="task row">
 				<img src="" alt="triangular arrow"/>
