Added new css file for candidate step 1 view.  renamed login.css to main.css

--- a/CODE2040Dashboard/grails-app/views/candidate_app.html
+++ b/CODE2040Dashboard/grails-app/views/candidate_app.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>CODE:2040 - Application</title>
+		<link rel="stylesheet" type="text/css" href="main.css" />
+		<link rel="stylesheet" type="text/css" href="candidate_view_1.css" />
 	</head>
 	<body>
 		<div class="header">
@@ -10,7 +12,7 @@
 		</div>
 		<div class="content">
 			<h3 class="form title">The Facts</h3>
-			<form class="log submission" action="mailto:acatton@gmail.com" method="post">
+			<form class="log submission" action="" method="post">
 				<div class="row">
 					<div class="float">
 						<label for="reg_name">Name:</label><br/>
@@ -68,7 +70,9 @@
 						<label for="mixed">Two or more races</label>
 					</div>
 				</div>
-				<input type="submit" value="Submit"/>
+				<div class="row" id="formButton">
+					<input type="submit" value="Submit"/>
+				</div>
 			</form>
 		</div>
 	</body>
