--- a/CODE2040Dashboard/grails-app/views/staff-login.html
+++ b/CODE2040Dashboard/grails-app/views/staff-login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>CODE:2040 - Staff</title>
-		<link rel="stylesheet" type="text/css" href="login.css" />
+		<link rel="stylesheet" type="text/css" href="main.css" />
 		<script type="text/javascript" src="login.js"></script>
 	</head>
 	<body>
