--- a/CODE2040Dashboard/grails-app/views/candidate_app.html
+++ b/CODE2040Dashboard/grails-app/views/candidate_app.html
@@ -16,7 +16,7 @@
 				<div class="row">
 					<div class="float">
 						<label for="reg_name">Name:</label><br/>
-						<input type="text" id="reg_name"/>
+						<input type="text" id="reg_name" name = "name"/>
 					</div>
 					<div class="float">
 						<label for="reg_phone">Phone:</label><br/>
@@ -24,7 +24,7 @@
 					</div>
 					<div class="float">
 						<label for="reg_gender">Gender:</label><br/>
-						<select id="reg_gender">
+						<select id="reg_gender" name = "gender">
 							<option>Male</option>
 							<option>Female</option>
 							<option>Prefer not to say</option>
@@ -34,21 +34,21 @@
 				<div class="row">
 					<div class="float">
 						<label for="reg_school">College:</label><br/>
-						<input type="text" id="reg_school"/>
+						<input type="text" id="reg_school" name="school"/>
 					</div>
 					<div class="float">
 						<label for="reg_grad_yr">Expected graduation year:</label><br/>
-						<input type="text" id="reg_grad_yr" />
+						<input type="text" id="reg_grad_yr" name="gradDate"/>
 					</div>
 				</div>
 				<div class="row">
 					<div class="float">
 						<label for="reg_state">Home state:</label><br/>
-						<input type="text" id="reg_state"/>
+						<input type="text" id="reg_state" name = "homeState"/>
 					</div>
 					<div class="float">
 						<label for="reg_country">Home country:</label><br/>
-						<input type="text" id="reg_country"/>
+						<input type="text" id="reg_country" name = "country"/>
 					</div>
 					<div class="float">
 						<label>Race:</label><br/>
