split first name into first name and last name

--- a/CODE2040Dashboard/grails-app/views/candidate_app.html
+++ b/CODE2040Dashboard/grails-app/views/candidate_app.html
@@ -15,8 +15,12 @@
 			<form class="log submission" action="" method="post">
 				<div class="row">
 					<div class="float">
-						<label for="reg_name">Name:</label><br/>
-						<input type="text" id="reg_name" name = "name"/>
+						<label for="reg_fname">First Name:</label><br/>
+						<input type="text" id="reg_fname" name = "fname"/>
+					</div>
+					<div class="float">
+						<label for="reg_lname">Last Name:</label><br/>
+						<input type="text" id="reg_lname" name = "lname"/>
 					</div>
 					<div class="float">
 						<label for="reg_phone">Phone:</label><br/>
