--- a/CODE2040Dashboard/web-app/css/cv_app.css
+++ b/CODE2040Dashboard/web-app/css/cv_app.css
@@ -1,19 +1,37 @@
 div.content {
 	text-align: left;
-	width:600px;
+	width: 800px;
 }
 
 div.float {
-	padding: 10px;
+	padding: 5px;
+	width: 250px;
 }
 
 #formButton {
 	text-align: center;
 }
 
-#app_school {
-	max-width: 25%;
+.short_ddm {
+	max-width: 125px;
 }
 
 div.row {
+}
+
+.major_ta {
+	width: 115px;
+	height: 50px;
+}
+
+div.half {
+	width: 375px;
+}
+
+.short_answer {
+	max-width:350px;
+}
+
+#app_resume {
+	min-width: 350px;
 }
